# prospero

./: .gitignore  CLAUDE.md  README.md  acb-import.csv  acb-report-2023.csv  acb-report-2024.csv  acb-report-2025.csv  pyproject.toml
data-sample/: README.md  process-csv.sh
data-sample/complete/: Releases Net Shares Report.csv  Withdrawals Report.csv
docs/: acb-internals.md  acb.md  pdf.md  planner.md  portfolio.md  tax.md
src/fin_sim/cli/: app.py  planner.py  portfolio.py
src/fin_sim/display/: tables.py
src/fin_sim/models/: planner.py
src/fin_sim/services/: market_data.py  planner_engine.py  portfolio_engine.py  tax.py
src/fin_sim/storage/: store.py
src/prospero/cli/: _options.py  acb.py  app.py  planner.py  portfolio.py  tax.py
src/prospero/display/: csv.py  pdf.py  tables.py
src/prospero/models/: acb.py  planner.py  portfolio.py
src/prospero/services/: acb_csv.py  acb_engine.py  fx.py  planner_engine.py  portfolio_engine.py  tax.py
src/prospero/storage/: store.py
tests/: test_acb_csv.py  test_acb_engine.py  test_display_tables.py  test_pdf.py  test_planner_engine.py  test_portfolio_engine.py  test_storage.py  test_tax.py
