[project]
name = "fin-sim"
version = "0.1.0"
description = "Financial simulation CLI — portfolio tracker and wealth planner"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.15",
    "yfinance>=0.2",
    "rich>=13",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[project.scripts]
fin-sim = "fin_sim.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fin_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
