[project]
name = "prospero"
version = "0.1.0"
description = "Portfolio tracker and wealth planner CLI"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.15",
    "yfinance>=0.2",
    "rich>=13",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[project.scripts]
prospero = "prospero.cli.app:app"
prospero-acb = "prospero.cli.acb:app"
prospero-plan = "prospero.cli.planner:app"
prospero-portfolio = "prospero.cli.portfolio:app"
prospero-tax = "prospero.cli.tax:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prospero"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
